-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0
-
None
-
Windows 7, MinGW 4.6.2
-
820f79284248e5fcc9910282055e67f07c918559
Nokia logo & copyright doesn't seem to follow the bottom left corner of the map. As seen in the screenshots attached.
- is required for
-
QTBUG-31590 Nokia backend related backlog
-
- Withdrawn
-
For Gerrit Dashboard: QTBUG-26042 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
29589,1 | Move copyright message to follow map when it resizes | master | qt/qtlocation | Status: MERGED | +2 | 0 |