Move copyright message to follow map when it resizes

Task-number: QTBUG-26042
Change-Id: I9aa24a484f3fba6fb8f3e0c3309455a8ab1b9029
Reviewed-by: Ian Chen <ian.1.chen@nokia.com>